--- a/index.html
+++ b/index.html
@@ -8,37 +8,50 @@
 	<meta name="keywords" content="cv, resume, Ivan">
 	<meta name="description" content="Мой сайт резюме">
 	<title>Ivan resume</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-	<img src="https://sun9-east.userapi.com/sun9-32/s/v1/if1/dgwLi_Rfjwsxlnq-lH4AGN2zSG1pru3tObT5qBLZfhPECBsYZeC7zMyQCrRScG7nUwYDmYmf.jpg?size=1280x960&quality=96&type=album" width="300" alt="проверь ссылку)">
-	<h1>Ivan Lukjanov</h1>
-	<p>Я <em>человек, который решил </em>полностью изменить свою жизнь!</p>
-	<p>Я люблю природу, встречи с друзьями, компы и все что с ними связано</p>
-	<p>И у меня <strong><em>все обязательно получится!</em></strong></p>
-
-	<h2>Список социальных сетей</h2>
-	<a href="https://vk.com/mokeev_barmalei" target="blank" >Вк</a>
-	<a href="https://t.me/iviluk" target="blank">Telegram</a>
-	<a href="https://www.youtube.com/channel/UChUYHNv07dt6TsXoJ3YcMgA" target="_blank">Youtube</a>
-
-	<h2>Мои хобби</h2>
-	<ol>
-		<li>Пайка</li>
-		<li>Программирование</li>
-		<li>Бег</li>
-		<li>Компьютерные игры</li>
-		<li>Документальные фильмы</li>
-	</ol>
+	<div class="container">
+		<div class="box">
+	<div class="info">
+	<img src="img/dgwLi_Rfjwsxlnq-lH4AGN2zSG1pru3tObT5qBLZfhPECBsYZeC7zMyQCrRScG7nUwYDmYmf.jpg" alt="ivi" class="avatar">
+		<div class="info-text">
+			<h1>Ivan Lukjanov</h1>
+			<p>Я человек, который решил полностью изменить свою жизнь!</p>
+			<p>Я люблю природу, встречи с друзьями, компы и все что с ними связано</p>
+			<p>И у меня все обязательно получится</p>
+		</div>
+		</div>
+		<div class="social">
+	<h2>Список социальных сетей:</h2>
+	<div class="links">
+	<a href="https://vk.com/mokeev_barmalei" target="blank" class="btn1">Вк</a> /
+	<a href="https://t.me/iviluk" target="blank" class="btn1">Telegram</a> /
+	<a href="https://www.youtube.com/channel/UChUYHNv07dt6TsXoJ3YcMgA" target="_blank" class="btn1">Youtube</a>
+	</div>
+	</div>
+	<div class="card">
+		<h2>Мои хобби</h2>
+			<ol class="lists">
+				<li>Пайка</li>
+				<li>Программирование</li>
+				<li>Бег</li>
+				<li>Компьютерные игры</li>
+				<li>Документальные фильмы</li>
+			</ol>
+		</div>
+		<div class="card_1">
 	<h2>Опыт работы</h2>
-	<table border="2">
-		<thead>
+	<table class="table" width="500">
+		<!-- <thead>
 			<tr>
-				<th>Название</th>	
+				<th>Название</th>
 				<th>Должность</th>
 				<th>Год</th>
 			</tr>
-		</thead>
+		</thead>  -->
+		<tbody>
 		<tr>
 			<td>Тц Мега</td>
 			<td>Комплектовщик</td>
@@ -60,26 +73,31 @@
 			<td>Маляр</td>
 			<td>2021</td>
 		</tr>
+	</tbody>
 	</table>
-		<h2>Связаться со мной</h2>
-		<div>
-			<label for="text">Имя</label>
-			<input type="text" id="name" placeholder="Введите имя:">
-		</div>
-		<div>
-			<label for="email">Email</label>
-			<input type="email" id="email" placeholder="Введите email:">
-		</div>
-		<div>
-			<label for="message">Ваше сообщение</label>
-			<br>
-			<textarea name="message" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
-		</div> 
-		<div>
-			<input type="submit" value="Отправить!">
-			<!-- или <button>Отправить!</button> -->
-		</div>
-
+	</div>
+	<form action="/" class="form">
+	<h2>Связаться со мной</h2>
+	<div class="form-row">
+	<div class="form-group">
+		<label for="text">Ваше Имя:</label>
+		<input type="text" id="name" placeholder="Введите имя:">
+	</div>
+	<div class="form-group">
+		<label for="email">Ваш Email:</label>
+		<input type="email" id="email" placeholder="Введите email:">
+	</div>
+	</div>
+	<div class="form-group">
+		<label for="message">Ваше сообщение:</label>
+		<textarea name="message" cols="20" rows="5" placeholder="Введите сообщение..."></textarea>
+	</div>
+	<div>
+		<button class="btn">Отправить!</button>
+	</div>
+</form>
+</div>
+</div>
 </body>
 
-</html>	
+</html>
