--- a/index.html
+++ b/index.html
@@ -13,21 +13,20 @@
 
 <body>
 	<div class="container">
-		<div class="box">
 	<div class="info">
 	<img src="img/dgwLi_Rfjwsxlnq-lH4AGN2zSG1pru3tObT5qBLZfhPECBsYZeC7zMyQCrRScG7nUwYDmYmf.jpg" alt="ivi" class="avatar">
 		<div class="info-text">
 			<h1>Ivan Lukjanov</h1>
-			<p>Я человек, который решил полностью изменить свою жизнь!</p>
+			<p>Я работаю в сфере строительства на данный момент.</p>
 			<p>Я люблю природу, встречи с друзьями, компы и все что с ними связано</p>
-			<p>И у меня все обязательно получится</p>
+			<p>Начинаю свой путь во frontend разработку</p>
 		</div>
 		</div>
 		<div class="social">
 	<h2>Список социальных сетей:</h2>
 	<div class="links">
-	<a href="https://vk.com/mokeev_barmalei" target="blank" class="btn1">Вк</a> /
-	<a href="https://t.me/iviluk" target="blank" class="btn1">Telegram</a> /
+	<a href="https://vk.com/mokeev_barmalei" target="blank" class="btn1">Вк</a> 
+	<a href="https://t.me/iviluk" target="blank" class="btn1">Telegram</a> 
 	<a href="https://www.youtube.com/channel/UChUYHNv07dt6TsXoJ3YcMgA" target="_blank" class="btn1">Youtube</a>
 	</div>
 	</div>
@@ -35,8 +34,7 @@
 		<h2>Мои хобби</h2>
 			<ol class="lists">
 				<li>Пайка</li>
-				<li>Программирование</li>
-				<li>Бег</li>
+				<li>Плавание</li>
 				<li>Компьютерные игры</li>
 				<li>Документальные фильмы</li>
 			</ol>
@@ -69,8 +67,8 @@
 			<td>2020</td>
 		</tr>
 		<tr>
-			<td>Койра</td>
-			<td>Маляр</td>
+			<td>Эврика +</td>
+			<td>Мастер по ремонту</td>
 			<td>2021</td>
 		</tr>
 	</tbody>
@@ -96,7 +94,6 @@
 		<button class="btn">Отправить!</button>
 	</div>
 </form>
-</div>
 </div>
 </body>
 
